--- a/zbar_opencv/package.xml
+++ b/zbar_opencv/package.xml
@@ -4,7 +4,7 @@
   <version>1.0.0</version>
   <description>The zbar_opencv package</description>
   <maintainer email="tp6u4jo6@gmail.com">Wenjiu</maintainer>
-  <license>TODO</license>
+  <license>CC BY-NC-SA 4.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cv_bridge</build_depend>
